Added result image

--- a/report/TNM085_GROUP1.tex
+++ b/report/TNM085_GROUP1.tex
@@ -580,9 +580,15 @@ void main()
 		Nedan visas resultatet av att rendera ett lager av 3d-texturen som innehåller densitetens utbredning. De olika punktkällorna har olika densitet, där röken efter en tid breder ut sig och krockar med de cirkulära objekten. Implementationen tillåter en användare att styra den mittersta punktkällan.
 
 		\Subsection{Resultat}
-		I figur 1 visas resultatet av att rendera ett lager av 3d-texturen som innehåller densitetens utbredning. De olika punktkällorna har olika densitet, där röken efter en tid breder ut sig och krockar med de cirkulära objekten. Implementationen tillåter en användare att styra den mittersta punktkällan.
-
-		<Lägg in resultat-bild här>
+		I figur~\ref{fig:resultat} visas resultatet av att rendera ett lager av 3d-texturen som innehåller densitetens utbredning. De olika punktkällorna har olika densitet, där röken efter en tid breder ut sig och krockar med de cirkulära objekten. Implementationen tillåter en användare att styra den mittersta punktkällan.
+	
+	\begin{figure}[h]
+    	\centering
+    	\includegraphics[width=\linewidth]{report_images/resultat.png}
+    	\caption{Resultat av simuleringen.}
+   		\label{fig:resultat}
+	\end{figure}
+	
 	
 	\Section{Diskussion}
 		
